<resources>
    <string name="app_name">Smackchat</string>
	<string name="login">Log in</string>
	<string name="signup">Sign up</string>
	<string name="name_hint">Name</string>
	<string name="cell_phone_number">Cell phone number</string>
	<string name="send">Send</string>
	<string name="action_bar_search_contact">Search</string>
	<string name="add">Add</string>
	<string name="chats">Chats</string>
	<string name="add_contact">Add contact</string>
	<string name="select_contact">Select contact</string>
	<string name="new_chat">New chat</string>
	<string name="search">Search:</string>
	<string name="search_contact_no_result">No result</string>
	<string name="search_contact_result">Search result</string>
	<string name="search_contact">Search contact</string>
	<string name="phone_number">Phone number</string>
	<string name="password">Password</string>
	<string name="create_account_error">Create account error</string>
	<string name="account_already_exists">Account already exists</string>
	<string name="login_error">Login error</string>
	<string name="invalid_credentials">Invalid username/password</string>
	<string name="login_success">Login success</string>
	<string name="added">Added</string>
	<string name="accept">Accept</string>
	<string name="accepted">Accepted</string>
	<string name="new_contacts">New contacts</string>
	<string name="add_contact_text">wants to add you as a friend</string>
	<string name="contact_request_sent">Request sent, waiting for acceptance...</string>
	<string name="sending_contact_request_error">Sending request error</string>
	<string name="acceptance_text">I\'v accepted your request, let\'s chat</string>
	<string name="send_message">Send message</string>
	<string name="contact_profile">Contact profile</string>
	<string name="wait_for_acceptance">waiting for acceptance</string>
	<string name="delete">Delete</string>
	<string name="search_user_error">Search user error</string>
	<string name="no_network_connected">No network connected</string>
	<string name="new_messages"> new messages</string>
	<string name="settings">Setttings</string>
	<string name="status">Status</string>
	<string name="current_status">Your current status</string>
	<string name="select_status">Select your new status</string>
	<string name="default_status">Hey</string>
	<string name="no_status">***no status***</string>
	<string name="set_status_error">Set status error</string>
	<string name="update_status_text">update your status</string>
	<string name="profile_photo">Profile photo</string>
	<string name="no_chats_found">No chats found</string>
	<string name="no_contacts_found">No contacts found</string>
	<string name="incomplete_signup_info">Please input complete information</string>
	<string name="profile_avatar">Avatar</string>
	<string name="profile_nickname">Nick name</string>
	<string name="title_traffic_stats_fragment">Network traffic</string>
	<string name="title_profile_fragment">Profile</string>
	<string name="title_traffic_transmitted_preference">Traffic transmitted</string>
	<string name="title_traffic_received_preference">Traffic received</string>
	<string name="traffic_unit">KB</string>
	<string name="username_preference">user</string>
	<string name="password_preference">password</string>
	<string name="nickname_preference">nickname</string>
	<string name="avatar_preference">avatar</string>
	<string name="traffic_transmitted_preference">traffic_transmitted</string>
	<string name="traffic_received_preference">traffic_received</string>
	<string name="server_address_preference">server_address</string>
	<string name="secret_key_preference">secret_key</string>
	<string name="title_server_address">Server address</string>
	<string name="summary_server_address">Enter address of your Openfire server</string>
	<string name="server">Server</string>
	<string name="status_available">Available</string>
	<string name="status_busy">Busy</string>
	<string name="status_At_school">At school</string>
	<string name="status_At_work">At work</string>
	<string name="status_meeting">In a meeting</string>
	<string name="attach">Attach</string>
	<string name="gallery">Gallery</string>
	<string name="photo">Photo</string>
	<string name="location">Location</string>
</resources>