<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/action_search"
		android:icon="@drawable/ic_action_search"
		android:title="@string/action_bar_search_contact"
		android:showAsAction="ifRoom|collapseActionView"
		android:actionViewClass="android.widget.SearchView" />
	<item android:id="@+id/action_new_chat"
	    android:icon="@drawable/ic_action_new_chat"
		android:title="@string/new_chat"
		android:showAsAction="ifRoom" />
	<item android:id="@+id/action_add"
	    android:icon="@drawable/ic_action_add_person"
		android:title="@string/add"
		android:showAsAction="ifRoom" />
	<item android:id="@+id/action_settings"
	    android:title="@string/settings"
	    android:showAsAction="never" />
	<item android:id="@+id/action_set_status"
		android:title="@string/status"
		android:showAsAction="never" />
</menu>