<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="200dp"
    android:layout_height="200dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/attach_options_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/attach_options_container_horizontal_padding"
        android:paddingRight="@dimen/attach_options_container_horizontal_padding"
        android:paddingTop="@dimen/attach_options_container_vertical_padding"
        android:paddingBottom="@dimen/attach_options_container_vertical_padding"
        android:background="@android:color/background_light"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/attach_from_gallery"
                    android:layout_width="@dimen/attach_option_size"
                    android:layout_height="@dimen/attach_option_size"
                    android:background="@null"
                    android:src="@drawable/ic_attach_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/attach_new_photo"
                    android:layout_width="@dimen/attach_option_size"
                    android:layout_height="@dimen/attach_option_size"
                    android:src="@drawable/ic_attach_photo"
                    android:background="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/attach_location"
                    android:layout_width="@dimen/attach_option_size"
                    android:layout_height="@dimen/attach_option_size"
                    android:background="@null"
                    android:src="@drawable/ic_attach_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>